...
            "state" : "translated",
            "value" : "Make another"
          }
        }
      }
    },
    "Gerar título com IA" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Generate title with AI"
          }
...
            "state" : "translated",
            "value" : "More"
          }
        }
      }
    },
    "Mais ações" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "More actions"
          }
...
            "state" : "translated",
            "value" : "New section"
          }
        }
      }
    },
    "Nova tarefa" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New task"
          }
...
